tests/baselines/reference/parameterInitializersForwardReferencing(strict=true).errors.txt
parameterInitializersForwardReferencing.ts(1,15): error TS7006: Parameter 'a' implicitly has an 'any' type.
parameterInitializersForwardReferencing.ts(6,16): error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
parameterInitializersForwardReferencing.ts(6,20): error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
parameterInitializersForwardReferencing.ts(6,23): error TS7022: 'b' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
parameterInitializersForwardReferencing.ts(11,17): error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
parameterInitializersForwardReferencing.ts(11,21): error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
parameterInitializersForwardReferencing.ts(11,24): error TS7022: 'b' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
parameterInitializersForwardReferencing.ts(11,28): error TS2373: Parameter 'b' cannot reference identifier 'c' declared after it.
parameterInitializersForwardReferencing.ts(11,31): error TS7022: 'c' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
parameterInitializersForwardReferencing.ts(17,21): error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
parameterInitializersForwardReferencing.ts(23,25): error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
parameterInitializersForwardReferencing.ts(32,21): error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
parameterInitializersForwardReferencing.ts(33,16): error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
parameterInitializersForwardReferencing.ts(37,14): error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
parameterInitializersForwardReferencing.ts(37,21): error TS2373: Parameter 'b' cannot reference identifier 'c' declared after it.
parameterInitializersForwardReferencing.ts(37,28): error TS2373: Parameter 'c' cannot reference identifier 'd' declared after it.
parameterInitializersForwardReferencing.ts(40,12): error TS7006: Parameter 'a' implicitly has an 'any' type.
parameterInitializersForwardReferencing.ts(40,19): error TS7024: Function implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
parameterInitializersForwardReferencing.ts(40,46): error TS7022: 'c' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== parameterInitializersForwardReferencing.ts (19 errors) ====
    function left(a, b = a, c = b) {
                  ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
        a;
        b;
    }
    
    function right(a = b, b = a) {
                   ~~~~~
!!! error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                       ~
!!! error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
                          ~~~~~
!!! error TS7022: 'b' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
        a;
        b;
    }
    
    function right2(a = b, b = c, c = a) {
                    ~~~~~
!!! error TS7022: 'a' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                        ~
!!! error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
                           ~~~~~
!!! error TS7022: 'b' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
                               ~
!!! error TS2373: Parameter 'b' cannot reference identifier 'c' declared after it.
                                  ~~~~~
!!! error TS7022: 'c' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
        a;
        b;
        c;
    }
    
    function inside(a = b) {
                        ~
!!! error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
        var b;
    }
    
    function outside() {
        var b;
        function inside(a = b) { // Still an error because b is declared inside the function
                            ~
!!! error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
            var b;
        }
    }
    
    function defaultArgFunction(a = function () { return b; }, b = 1) { }
    function defaultArgArrow(a = () => () => b, b = 3) { }
    
    class C {
        constructor(a = b, b = 1) { }
                        ~
!!! error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
        method(a = b, b = 1) { }
                   ~
!!! error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
    }
    
    // Function expressions
    var x = (a = b, b = c, c = d) => { var d; };
                 ~
!!! error TS2373: Parameter 'a' cannot reference identifier 'b' declared after it.
                        ~
!!! error TS2373: Parameter 'b' cannot reference identifier 'c' declared after it.
                               ~
!!! error TS2373: Parameter 'c' cannot reference identifier 'd' declared after it.
    
    // Should not produce errors - can reference later parameters if they occur within a function expression initializer.
    function f(a, b = function () { return c; }, c = b()) {
               ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                      ~~~~~~~~
!!! error TS7024: Function implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
                                                 ~~~~~~~
!!! error TS7022: 'c' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    }